@@ -56,6 +56,7 @@
     "gulp-es6-module-transpiler": "^0.2.1",
     "gulp-jshint": "^1.9.2",
     "gulp-sourcemaps": "^1.3.0",
-    "gulp-uglify": "^1.1.0"
+    "gulp-uglify": "^1.1.0",
+    "inflection": "^1.6.0"
   }
 }
