@@ -1,3 +1,5 @@
+feature - The default generator adds firebase to `config/environments.js`
+feature - A blueprint for generating firebase adapters
 changed - Removed `emberfire` bower dependency from `ember-cli` projects, only `firebase` is needed.
 changed - Allow Ember Data versions `1.0.0.beta.11` through `beta.14.x`.
 fixed - Use `EnumerableUtils` methods for Ember configs with `EXTEND_PROTOTYPES` set to false.
